// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRadioGroup.vue Render component and match snapshot(s) column - false 1`] = `

<div role="radiogroup"
     class="input-group radio-group"
>
  <div class="input-group__input">
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;

exports[`VRadioGroup.vue Render component and match snapshot(s) column - true 1`] = `

<div role="radiogroup"
     class="input-group radio-group radio-group--column"
>
  <div class="input-group__input">
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;

exports[`VRadioGroup.vue Render component and match snapshot(s) only defaults 1`] = `

<div role="radiogroup"
     class="input-group radio-group radio-group--column"
>
  <div class="input-group__input">
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;
